# pl-tracker

./: .gitignore  .pre-commit-config.yaml  LICENSE  entrypoint.py  pyproject.toml  sync.py
.github/: CODEOWNERS
.github/workflows/: sync_g_sheets.yaml
src/pl_tracker/: auth.py  calculations.py  database.py  gspread.py  landing.py  models.py  plots.py
src/pl_tracker/pages/: general_progress.py  inspect_program.py  load_program.py  nutrition.py  utils.py  video.py
